Revert "fix problem with text wrapping"
This reverts commit 3a9591dcd5ece25b23812728ceb0ecbb9ab8846c.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,7 +1,3 @@
-p {
-    white-space: nowrap;
-}
-
 #popup-background {
     width: 100vw;
     height: 100vh;
